v0.3.0rc - XXXX
  - Actions: added FadeOutBLTiles, FadeOutUpTiles, FadeOutDownTiles effects
  - Actions: added SplitCols, SplitRows effects
  - Actions: renamed FadeOutTiles to FadeOutTRTiles
  - Actions: added Ripple3D effect
  - Actions: Waves. parameter horizontal_sin and vertical_sin renamed to hsin and vsin
  - Actions: renamed ReverseTime to _ReverseTime to prevent massive usage
  - CocosNode: on_draw() replaced with draw(). It was conflicting with
	  pyglet's event
  - CocosNode: added the Camera attribute (removed from Grid object)
    It is no longer necessary to have an active grid to perform camera actions
  - Director: default projection is 3D (not glOrtho)
  - Transitions: Changed API. There is no need to pass the src scene as a
	  parameter. If omitted, the src scene will be current scene. 
	  init( dst, duration=2, src=current_scene)
  - Transitions: renamed ShrinkAndGrowTransition -> ShrinkGrowTransition
  - Transitions: renamed ShuffleTilesTransition -> ShuffleTransition
  - Transitions: renamed CurtainTransition to FadeTRTransition
  - Transitions: added FadeBLTransition, FadeUpTransition, FadeDownTransition
  - Transition: added SplitColsTransition, SplitRowsTransition
  - Transitions: added test for transitions

v0.3.0beta0 - May 5th, 2008
  - Actions: actions are defined in the actions/ folder
  - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
     Scale renamed to ScaleBy. Added ScaleTo
     Rotate renamed to RotateBy. Added RotateTo
  - Actions: Jump renamed to JumpBy. Added JumpTo.
    Changed the JumpBy/To API. JumpBy( (x,y), height, number_of_jumps, duration)
  - Actions: Added IntervalAction decorators:
     Accelerate, AccelDeccel, Speed, ReverseTime
  - Actions: time can be modified in a whole sequence. eg: Accelerate( sequence )
  - Actions: Added a new base class: InstantAction 
  - Actions: every cocosnode support actions. eg: sprites, layers, scenes, etc.
  - Actions: Added grid (mesh distortion) effects: