@@ -1,3 +1,6 @@
+Music
+-----
+
 Tetris music by: Sonotone Impérial
 From the album: Age Sexe Ville & Rock'n'Roll
 
@@ -6,3 +9,13 @@ http://www.jamendo.com/en/album/983
 
 License:
 http://creativecommons.org/licenses/by-nc-nd/3.0/
+
+
+
+Sound Effects
+-------------
+
+From http://www.soundsnap.com
+
+License:
+http://www.soundsnap.com/tos
